@@ -1,3 +1,3 @@
 class Sanitize
-  VERSION = '1.2.1.dev.20100124'
+  VERSION = '1.2.1.dev.20100329'
 end
